--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -17,6 +17,8 @@ spring:
           time_zone: UTC
   kafka:
     bootstrap-servers: localhost:9092
+    properties:
+      spring.json.add.type.headers: false
 
 server:
   port: 8080
