feat: implement Dead Letter Topic (DLT) with retry recoverer

--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -22,6 +22,7 @@ app:
   kafka:
      topics:
        stock-event: stock-event
+       stock-event-dlt: stock-event-dlt
      group-id:
        inventory: inventory-group
 
